<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckingActivity">


    <RelativeLayout
        android:id="@+id/dev_mode"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            app:lottie_rawRes="@raw/stop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animationView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#853ED8"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/developer_options_detected"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_ve_detected_that_developer_options_are_enabled_on_your_device_which_restricts_access_to_our_offerwall_to_continue_earning_rewards_please_disable_developer_options_and_relaunch_the_app"
            android:layout_below="@id/t1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_to_proceed"
            android:layout_below="@id/t2"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/manrope_extrabold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Open Settings on your device"
            android:layout_below="@id/t3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_developer_options"
            android:layout_below="@id/t4"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_developer_options_off"
            android:layout_below="@id/t5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reopen_the_app"
            android:layout_below="@id/t6"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_block_vpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            app:lottie_rawRes="@raw/stop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animationView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#853ED8"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/developer_options_detected"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_ve_detected_that_developer_options_are_enabled_on_your_device_which_restricts_access_to_our_offerwall_to_continue_earning_rewards_please_disable_developer_options_and_relaunch_the_app"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>






</RelativeLayout>